# pdf-to-powerpoint

./: .replit  app.py  ocr_utils.py  pdf_processor.py  ppt_generator.py  pyproject.toml
